--- a/app/scss/base/svgSprite.scss
+++ b/app/scss/base/svgSprite.scss
@@ -8,7 +8,7 @@
     display: inline-block;
     background-image: url("../images/sprite.svg");
     background-repeat: no-repeat;
-    background-size: 74.4em 234.8em;
+    background-size: 74.4em 240.1em;
 }
 
 .no-svg .svg-icon:before {
@@ -71,8 +71,17 @@
 
 
 
-  .svg-icon.svg-instagram:before {
+  .svg-icon.svg-img-catalog-product-1:before {
       background-position: 0em -97.6em;
+      width: 5.1em;
+      height: 5.3em;
+  }
+
+
+
+
+  .svg-icon.svg-instagram:before {
+      background-position: 0em -102.9em;
       width: 1.8em;
       height: 1.8em;
   }
@@ -81,7 +90,7 @@
 
 
   .svg-icon.svg-logotype:before {
-      background-position: 0em -99.4em;
+      background-position: 0em -104.7em;
       width: 15.1em;
       height: 9.6em;
   }
@@ -90,7 +99,7 @@
 
 
   .svg-icon.svg-logotype-short:before {
-      background-position: 0em -109em;
+      background-position: 0em -114.3em;
       width: 15.2em;
       height: 4.1em;
   }
@@ -99,7 +108,7 @@
 
 
   .svg-icon.svg-navigation:before {
-      background-position: 0em -113.1em;
+      background-position: 0em -118.4em;
       width: 7.9em;
       height: 7.8em;
   }
@@ -108,7 +117,7 @@
 
 
   .svg-icon.svg-ok:before {
-      background-position: 0em -120.9em;
+      background-position: 0em -126.2em;
       width: 1.4em;
       height: 2.4em;
   }
@@ -117,7 +126,7 @@
 
 
   .svg-icon.svg-pack:before {
-      background-position: 0em -123.3em;
+      background-position: 0em -128.6em;
       width: 40.3em;
       height: 24.2em;
   }
@@ -126,7 +135,7 @@
 
 
   .svg-icon.svg-presentation:before {
-      background-position: 0em -147.5em;
+      background-position: 0em -152.8em;
       width: 7.8em;
       height: 9.8em;
   }
@@ -135,7 +144,7 @@
 
 
   .svg-icon.svg-prevslogo:before {
-      background-position: 0em -157.3em;
+      background-position: 0em -162.6em;
       width: 24.2em;
       height: 24.3em;
   }
@@ -144,7 +153,7 @@
 
 
   .svg-icon.svg-promo-box-top-text:before {
-      background-position: 0em -181.6em;
+      background-position: 0em -186.9em;
       width: 23.2em;
       height: 13.4em;
   }
@@ -153,7 +162,7 @@
 
 
   .svg-icon.svg-rhombus:before {
-      background-position: 0em -195em;
+      background-position: 0em -200.3em;
       width: 13.6em;
       height: 13.4em;
   }
@@ -162,7 +171,7 @@
 
 
   .svg-icon.svg-statistics:before {
-      background-position: 0em -208.4em;
+      background-position: 0em -213.7em;
       width: 10.3em;
       height: 7em;
   }
@@ -171,7 +180,7 @@
 
 
   .svg-icon.svg-timer:before {
-      background-position: 0em -215.4em;
+      background-position: 0em -220.7em;
       width: 3.3em;
       height: 3.3em;
   }
@@ -180,7 +189,7 @@
 
 
   .svg-icon.svg-twitter:before {
-      background-position: 0em -218.7em;
+      background-position: 0em -224em;
       width: 2em;
       height: 1.8em;
   }
@@ -189,7 +198,7 @@
 
 
   .svg-icon.svg-vk:before {
-      background-position: 0em -220.5em;
+      background-position: 0em -225.8em;
       width: 2.6em;
       height: 1.6em;
   }
@@ -198,7 +207,7 @@
 
 
   .svg-icon.svg-vote:before {
-      background-position: 0em -222.1em;
+      background-position: 0em -227.4em;
       width: 12.1em;
       height: 11em;
   }
@@ -207,7 +216,7 @@
 
 
   .svg-icon.svg-wikipedia:before {
-      background-position: 0em -233.1em;
+      background-position: 0em -238.4em;
       width: 2.8em;
       height: 1.7em;
   }
