--- a/app/templates/modules/header.pug
+++ b/app/templates/modules/header.pug
@@ -13,7 +13,7 @@ mixin header
   .header
     .header-static
       .header-box
-        a.header-box-logotype(href="#main")
+        a.header-box-logotype(href="/")
           +icon('logotype', 'svg')
           +icon('logotype-short', 'svg')
         button.header-box-nav-button#change-nav
