--- a/app/templates/modules/footer.pug
+++ b/app/templates/modules/footer.pug
@@ -45,4 +45,4 @@ mixin footer()
             +footer-box-nav-social-group-link(getData('footer'))
         .footer-box-nav-copyright © ОАО Молочный завод «Гиагинский» 2020 г.
         .footer-box-nav-worked Сделано в 
-          a(href="#") CloudMill
+          a(href="https://cloudmill.ru" target="_blank") CloudMill
