--- a/app/templates/pages/catalog-products.pug
+++ b/app/templates/pages/catalog-products.pug
@@ -11,6 +11,7 @@ block content
     +header()
     section.main-products
       .content.main-products-box
+        span.title-page Вытяжные
         .main-products-category
           a.main-products-category-el(href="#")
             .category-el-icon
@@ -65,8 +66,6 @@ block content
               img(src="./images/img-products-6.png")
               img(src="./images/img-products-6.png")
             .products-el-title Сыр «Косичка» «Гиагинский»
-
-
 
     +subscription().bg-white
     +footer().bg-white
