--- a/app/scss/base/svgSprite.scss
+++ b/app/scss/base/svgSprite.scss
@@ -8,7 +8,7 @@
     display: inline-block;
     background-image: url("../images/sprite.svg");
     background-repeat: no-repeat;
-    background-size: 74.4em 240.1em;
+    background-size: 74.4em 282.6em;
 }
 
 .no-svg .svg-icon:before {
@@ -26,8 +26,17 @@
 
 
 
-  .svg-icon.svg-car:before {
+  .svg-icon.svg-beer:before {
       background-position: 0em -1.8em;
+      width: 9.9em;
+      height: 8.7em;
+  }
+
+
+
+
+  .svg-icon.svg-car:before {
+      background-position: 0em -10.5em;
       width: 13.6em;
       height: 7.2em;
   }
@@ -36,7 +45,7 @@
 
 
   .svg-icon.svg-certificate:before {
-      background-position: 0em -9em;
+      background-position: 0em -17.7em;
       width: 7.7em;
       height: 9.1em;
   }
@@ -45,7 +54,7 @@
 
 
   .svg-icon.svg-checkbox:before {
-      background-position: 0em -18.1em;
+      background-position: 0em -26.8em;
       width: 3.1em;
       height: 3.1em;
   }
@@ -54,7 +63,7 @@
 
 
   .svg-icon.svg-cheese-main-slider-1:before {
-      background-position: 0em -21.2em;
+      background-position: 0em -29.9em;
       width: 74.4em;
       height: 74.1em;
   }
@@ -62,8 +71,26 @@
 
 
 
+  .svg-icon.svg-cloud-1:before {
+      background-position: 0em -104em;
+      width: 12.3em;
+      height: 2.5em;
+  }
+
+
+
+
+  .svg-icon.svg-cloud-2:before {
+      background-position: 0em -106.5em;
+      width: 9.9em;
+      height: 5.4em;
+  }
+
+
+
+
   .svg-icon.svg-facebook:before {
-      background-position: 0em -95.3em;
+      background-position: 0em -111.9em;
       width: 1.1em;
       height: 2.3em;
   }
@@ -72,7 +99,7 @@
 
 
   .svg-icon.svg-img-catalog-product-1:before {
-      background-position: 0em -97.6em;
+      background-position: 0em -114.2em;
       width: 5.1em;
       height: 5.3em;
   }
@@ -81,7 +108,7 @@
 
 
   .svg-icon.svg-instagram:before {
-      background-position: 0em -102.9em;
+      background-position: 0em -119.5em;
       width: 1.8em;
       height: 1.8em;
   }
@@ -90,7 +117,7 @@
 
 
   .svg-icon.svg-logotype:before {
-      background-position: 0em -104.7em;
+      background-position: 0em -121.3em;
       width: 15.1em;
       height: 9.6em;
   }
@@ -99,7 +126,7 @@
 
 
   .svg-icon.svg-logotype-short:before {
-      background-position: 0em -114.3em;
+      background-position: 0em -130.9em;
       width: 15.2em;
       height: 4.1em;
   }
@@ -108,7 +135,7 @@
 
 
   .svg-icon.svg-navigation:before {
-      background-position: 0em -118.4em;
+      background-position: 0em -135em;
       width: 7.9em;
       height: 7.8em;
   }
@@ -117,7 +144,7 @@
 
 
   .svg-icon.svg-ok:before {
-      background-position: 0em -126.2em;
+      background-position: 0em -142.8em;
       width: 1.4em;
       height: 2.4em;
   }
@@ -126,7 +153,7 @@
 
 
   .svg-icon.svg-pack:before {
-      background-position: 0em -128.6em;
+      background-position: 0em -145.2em;
       width: 40.3em;
       height: 24.2em;
   }
@@ -134,8 +161,26 @@
 
 
 
+  .svg-icon.svg-pan:before {
+      background-position: 0em -169.4em;
+      width: 14.8em;
+      height: 6.6em;
+  }
+
+
+
+
+  .svg-icon.svg-paste:before {
+      background-position: 0em -176em;
+      width: 9.5em;
+      height: 6.1em;
+  }
+
+
+
+
   .svg-icon.svg-presentation:before {
-      background-position: 0em -152.8em;
+      background-position: 0em -182.1em;
       width: 7.8em;
       height: 9.8em;
   }
@@ -144,7 +189,7 @@
 
 
   .svg-icon.svg-prevslogo:before {
-      background-position: 0em -162.6em;
+      background-position: 0em -191.9em;
       width: 24.2em;
       height: 24.3em;
   }
@@ -153,7 +198,7 @@
 
 
   .svg-icon.svg-promo-box-top-text:before {
-      background-position: 0em -186.9em;
+      background-position: 0em -216.2em;
       width: 23.2em;
       height: 13.4em;
   }
@@ -162,7 +207,7 @@
 
 
   .svg-icon.svg-rhombus:before {
-      background-position: 0em -200.3em;
+      background-position: 0em -229.6em;
       width: 13.6em;
       height: 13.4em;
   }
@@ -170,8 +215,26 @@
 
 
 
+  .svg-icon.svg-salad:before {
+      background-position: 0em -243em;
+      width: 9.6em;
+      height: 7.9em;
+  }
+
+
+
+
+  .svg-icon.svg-shawarma:before {
+      background-position: 0em -250.9em;
+      width: 9.6em;
+      height: 5.3em;
+  }
+
+
+
+
   .svg-icon.svg-statistics:before {
-      background-position: 0em -213.7em;
+      background-position: 0em -256.2em;
       width: 10.3em;
       height: 7em;
   }
@@ -180,7 +243,7 @@
 
 
   .svg-icon.svg-timer:before {
-      background-position: 0em -220.7em;
+      background-position: 0em -263.2em;
       width: 3.3em;
       height: 3.3em;
   }
@@ -189,7 +252,7 @@
 
 
   .svg-icon.svg-twitter:before {
-      background-position: 0em -224em;
+      background-position: 0em -266.5em;
       width: 2em;
       height: 1.8em;
   }
@@ -198,7 +261,7 @@
 
 
   .svg-icon.svg-vk:before {
-      background-position: 0em -225.8em;
+      background-position: 0em -268.3em;
       width: 2.6em;
       height: 1.6em;
   }
@@ -207,7 +270,7 @@
 
 
   .svg-icon.svg-vote:before {
-      background-position: 0em -227.4em;
+      background-position: 0em -269.9em;
       width: 12.1em;
       height: 11em;
   }
@@ -216,7 +279,7 @@
 
 
   .svg-icon.svg-wikipedia:before {
-      background-position: 0em -238.4em;
+      background-position: 0em -280.9em;
       width: 2.8em;
       height: 1.7em;
   }
