--- a/app/scss/modules/footer.scss
+++ b/app/scss/modules/footer.scss
@@ -21,9 +21,11 @@ footer {
   &-nav {
     &-production {
       grid-column: 1 / 2;
+      margin-top: -15px;
 
       @include screen('sm', 'max') {
         grid-column: 1 / 4;
+        margin-top: 0px;
       }
       display: flex;
 
@@ -65,7 +67,7 @@ footer {
 
     &-contact {
       grid-column: 2 / 3;
-      grid-row: 1 / 3;
+      grid-row: 1 / 4;
       
       @include screen('md', 'max') {
         grid-column: 2 / 4;
@@ -84,11 +86,13 @@ footer {
       &-group {
         margin-bottom: 44px;
         &-name {
+          font-size: 14px;
           color: $color-text-complementary;
           margin-bottom: 8px;
         }
 
         &-desc {
+          font-size: 16px;
           line-height: 26px;
           color: $color-text-main;
         }
@@ -174,6 +178,10 @@ footer {
     &-worked {
       grid-column: 3 / 4;
 
+      a {
+        color: #ee7754;
+      }
+
       @include screen('md', 'max') {
         grid-column: 1 / 4;
       }
@@ -185,6 +193,8 @@ footer {
     }
 
     &-copyright {
+      color: #919191;
+      
       @include screen('md', 'max') {
         grid-column: 1 / 4;
       }
