--- a/app/templates/pages/partners.pug
+++ b/app/templates/pages/partners.pug
@@ -4,19 +4,51 @@ include ../modules/subscription.pug
 include ../modules/about.pug
 include ../modules/footer.pug
 include ../modules/contact.pug
-include ../modules/prevs.pug
-include ../modules/info-partners.pug
-include ../modules/main-partners.pug
 include ../modules/header.pug
 
 block variables
  -var pageTitle='Партнерам'
 
+mixin info-box-el(json)
+  each data in json
+    .info-box-el
+      h3 #{data.number} <sup>#{data.units}</sup>
+      p #{data.text}
+
+mixin prevs-row-el(json)
+  each data in json
+    .prevs-box-row-el
+      .prevs-box-row-el-icon
+        +icon(data.icon, 'svg')(class=data.icon)
+      p #{data.text}
+
+mixin main-partners-box-nav-el(json)
+  each data in json
+    a.main-partners-box-nav-link(href=data.link) #{data.title}
+
 block content
     +header()
-    +main-partners().bg-additional
-    +info-partners()
-    +prevs()
+    section.main-partners#main-partners.bg-additional
+      .content.main-partners-box
+        .main-partners-box-nav
+          +main-partners-box-nav-el(getData('pages/partners/main'))
+        h2.main-partners-box-description Продукция завода <span class="text-border-dashed">«Гиагинский»</span> представлена во всех федеральных сетях, а потребители знают и ищут именно наш бренд.
+    section.info#info
+      .content.info-box
+        .info-box-header
+          p За 2019 год мы произвели
+        +info-box-el(getData('pages/partners/info-partners'))
+        .info-box-details
+          a(href="#details") Скачать презентацию
+    section.prevs
+        .content.prevs-box
+          .prevs-box-info
+            h2 Имеем эксклюзивное право на производство Адыгейского сыра и производим по технологии НМПТ
+            +icon('prevslogo', 'svg')
+          .prevs-box-row
+            +prevs-row-el(getData('pages/partners/prevs'))
+            .prevs-box-row-el
+              +icon('pack', 'svg')(class="pack")
     +contact().bg-additional
     +about().bg-additional
     +subscription().bg-additional
