--- a/app/templates/modules/header.pug
+++ b/app/templates/modules/header.pug
@@ -18,9 +18,7 @@ mixin header
           +icon('logotype-short', 'svg')
         button.header-box-nav-button#change-nav
           .burger
-            span.wand
-            span.wand
-            span.wand
+            span
           +icon('navigation', 'svg')
       .header-box-nav.lg
         .wrapper
