[UPDATE] Wave - animation

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -16,6 +16,7 @@
 @import "modules/info-partners";
 @import "modules/main-partners";
 @import "modules/header";
+@import "modules/animations";
 
 
 .fullImg {
