--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -33,7 +33,7 @@ block content
           +icon('arrow', 'svg')
       .main-index-box-control-items
   +recepts()
-  section.promo.bg-additional
+  section.promo.bg-additional.waveSection(data-color="#f6f5f3")
     .content.promo-box
       .promo-box-top
         .top-left
