--- a/app/scss/base/svgSprite.scss
+++ b/app/scss/base/svgSprite.scss
@@ -8,7 +8,7 @@
     display: inline-block;
     background-image: url("../images/sprite.svg");
     background-repeat: no-repeat;
-    background-size: 74.4em 282.6em;
+    background-size: 74.4em 288.8em;
 }
 
 .no-svg .svg-icon:before {
@@ -62,8 +62,26 @@
 
 
 
-  .svg-icon.svg-cheese-main-slider-1:before {
+  .svg-icon.svg-checkbox-checked:before {
       background-position: 0em -29.9em;
+      width: 3.2em;
+      height: 3.1em;
+  }
+
+
+
+
+  .svg-icon.svg-checkbox-hover:before {
+      background-position: 0em -33em;
+      width: 3.2em;
+      height: 3.1em;
+  }
+
+
+
+
+  .svg-icon.svg-cheese-main-slider-1:before {
+      background-position: 0em -36.1em;
       width: 74.4em;
       height: 74.1em;
   }
@@ -72,7 +90,7 @@
 
 
   .svg-icon.svg-cloud-1:before {
-      background-position: 0em -104em;
+      background-position: 0em -110.2em;
       width: 12.3em;
       height: 2.5em;
   }
@@ -81,7 +99,7 @@
 
 
   .svg-icon.svg-cloud-2:before {
-      background-position: 0em -106.5em;
+      background-position: 0em -112.7em;
       width: 9.9em;
       height: 5.4em;
   }
@@ -90,7 +108,7 @@
 
 
   .svg-icon.svg-facebook:before {
-      background-position: 0em -111.9em;
+      background-position: 0em -118.1em;
       width: 1.1em;
       height: 2.3em;
   }
@@ -99,7 +117,7 @@
 
 
   .svg-icon.svg-img-catalog-product-1:before {
-      background-position: 0em -114.2em;
+      background-position: 0em -120.4em;
       width: 5.1em;
       height: 5.3em;
   }
@@ -108,7 +126,7 @@
 
 
   .svg-icon.svg-instagram:before {
-      background-position: 0em -119.5em;
+      background-position: 0em -125.7em;
       width: 1.8em;
       height: 1.8em;
   }
@@ -117,7 +135,7 @@
 
 
   .svg-icon.svg-logotype:before {
-      background-position: 0em -121.3em;
+      background-position: 0em -127.5em;
       width: 15.1em;
       height: 9.6em;
   }
@@ -126,7 +144,7 @@
 
 
   .svg-icon.svg-logotype-short:before {
-      background-position: 0em -130.9em;
+      background-position: 0em -137.1em;
       width: 15.2em;
       height: 4.1em;
   }
@@ -135,7 +153,7 @@
 
 
   .svg-icon.svg-navigation:before {
-      background-position: 0em -135em;
+      background-position: 0em -141.2em;
       width: 7.9em;
       height: 7.8em;
   }
@@ -144,7 +162,7 @@
 
 
   .svg-icon.svg-ok:before {
-      background-position: 0em -142.8em;
+      background-position: 0em -149em;
       width: 1.4em;
       height: 2.4em;
   }
@@ -153,7 +171,7 @@
 
 
   .svg-icon.svg-pack:before {
-      background-position: 0em -145.2em;
+      background-position: 0em -151.4em;
       width: 40.3em;
       height: 24.2em;
   }
@@ -162,7 +180,7 @@
 
 
   .svg-icon.svg-pan:before {
-      background-position: 0em -169.4em;
+      background-position: 0em -175.6em;
       width: 14.8em;
       height: 6.6em;
   }
@@ -171,7 +189,7 @@
 
 
   .svg-icon.svg-paste:before {
-      background-position: 0em -176em;
+      background-position: 0em -182.2em;
       width: 9.5em;
       height: 6.1em;
   }
@@ -180,7 +198,7 @@
 
 
   .svg-icon.svg-presentation:before {
-      background-position: 0em -182.1em;
+      background-position: 0em -188.3em;
       width: 7.8em;
       height: 9.8em;
   }
@@ -189,7 +207,7 @@
 
 
   .svg-icon.svg-prevslogo:before {
-      background-position: 0em -191.9em;
+      background-position: 0em -198.1em;
       width: 24.2em;
       height: 24.3em;
   }
@@ -198,7 +216,7 @@
 
 
   .svg-icon.svg-promo-box-top-text:before {
-      background-position: 0em -216.2em;
+      background-position: 0em -222.4em;
       width: 23.2em;
       height: 13.4em;
   }
@@ -207,7 +225,7 @@
 
 
   .svg-icon.svg-rhombus:before {
-      background-position: 0em -229.6em;
+      background-position: 0em -235.8em;
       width: 13.6em;
       height: 13.4em;
   }
@@ -216,7 +234,7 @@
 
 
   .svg-icon.svg-salad:before {
-      background-position: 0em -243em;
+      background-position: 0em -249.2em;
       width: 9.6em;
       height: 7.9em;
   }
@@ -225,7 +243,7 @@
 
 
   .svg-icon.svg-shawarma:before {
-      background-position: 0em -250.9em;
+      background-position: 0em -257.1em;
       width: 9.6em;
       height: 5.3em;
   }
@@ -234,7 +252,7 @@
 
 
   .svg-icon.svg-statistics:before {
-      background-position: 0em -256.2em;
+      background-position: 0em -262.4em;
       width: 10.3em;
       height: 7em;
   }
@@ -243,7 +261,7 @@
 
 
   .svg-icon.svg-timer:before {
-      background-position: 0em -263.2em;
+      background-position: 0em -269.4em;
       width: 3.3em;
       height: 3.3em;
   }
@@ -252,7 +270,7 @@
 
 
   .svg-icon.svg-twitter:before {
-      background-position: 0em -266.5em;
+      background-position: 0em -272.7em;
       width: 2em;
       height: 1.8em;
   }
@@ -261,7 +279,7 @@
 
 
   .svg-icon.svg-vk:before {
-      background-position: 0em -268.3em;
+      background-position: 0em -274.5em;
       width: 2.6em;
       height: 1.6em;
   }
@@ -270,7 +288,7 @@
 
 
   .svg-icon.svg-vote:before {
-      background-position: 0em -269.9em;
+      background-position: 0em -276.1em;
       width: 12.1em;
       height: 11em;
   }
@@ -279,7 +297,7 @@
 
 
   .svg-icon.svg-wikipedia:before {
-      background-position: 0em -280.9em;
+      background-position: 0em -287.1em;
       width: 2.8em;
       height: 1.7em;
   }
